<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCalculatorActivity">

    <!-- The bill amount -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingTop="10dp"
        android:text="@string/bill_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/billAmountEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="397dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="8"
        android:inputType="numberDecimal"
        android:text="@string/bill_amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- The tip percent -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percent_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentTextView"
        app:layout_constraintLeft_toLeftOf="@+id/textView" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="70dp"
        android:layout_height="22dp"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentDownButton"
        app:layout_constraintLeft_toLeftOf="@+id/billAmountEditText" />

    <Button
        android:id="@+id/percentDownButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="8dp"
        android:text="@string/decrease"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentUpButton"
        app:layout_constraintRight_toLeftOf="@+id/percentUpButton" />

    <Button
        android:id="@+id/percentUpButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/increase"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@+id/billAmountEditText"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

    <!-- The tip amount -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tipTextView"
        app:layout_constraintLeft_toLeftOf="@+id/textView2" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/percentTextView"
        app:layout_constraintTop_toBottomOf="@+id/percentTextView" />

    <!-- The total amount -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalTextView"
        app:layout_constraintLeft_toLeftOf="@+id/textView3" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/total_amount"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/tipTextView"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginStart="16dp"
        android:text="User:"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="47dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

</android.support.constraint.ConstraintLayout>